[package]
name = "bideo_bame"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
notan = "0.12.1"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console", "Window", "CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement"] }

[lib]
crate-type = ["cdylib"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
lto = true
